--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,7 +2,7 @@ body {
   background-color: #000;
   color: #FFF;
 }
-button,select {
+button,select,input {
   display: block;
   margin: 5px;
   width: 100px;
